2008-06-22  Frederic Peters  <fpeters@0d.be>

	* tests/tests.py: define uprint() as jhbuild.main is not imported.

2008-06-22  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/commands/info.py, 
	jhbuild/commands/rdepends.py, jhbuild/moduleset.py: made module names
	entered by the user insensitive to case.  (closes: #538790)

2008-06-19  German Poo-Caaman~o  <gpoo@gnome.org>

	* modulesets/gnome-external-deps-2.24.modules: updated fontconfig
	to current stable release..  (closes: #537631)

2008-06-18  Baptiste Mille-Mathias  <baptiste.millemathias@gmail.com>

	* modulesets/gnome-2.24.modules: add evolution-data-server as
	dependency of phonemgr.

2008-06-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: don't use makeargs when running "make
	install".  (closes: #534643)

2008-06-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: tells evolution to be built
	*after* mono, as it has an optional dependency on it.  (#538794)

2008-06-17  Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>

	* modulesets/gnome-2.24.modules: increment gnokii release to 0.26 
	as requested by phonemgr.

2008-06-16  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: Use the 2.22 branch of
	libbonobo.

2008-06-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/utils/cmds.py: adds a get_stderr parameter
	to get_output, so it is possible to disable getting stderr output.  Use
	this parameter when getting the Python version number, used to set
	PYTHONPATH.  (closes again: #136983)

2008-06-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: set back working directory after the
	user comes back from the shell.  (closes: #534784, patch by packz).

2008-06-12  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Changed the clutter modules to use 
	trunk, because 0.7/0.8 will soon be API/ABI stable. Added -0.6 versions 