@@ -1,5 +1,12 @@
 2008-06-22  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/base.py: check if the bootstrap moduleset has 
+	been updated before running build and buildone commands, and notify
+	the user he may want to run jhbuild bootstrap if that is the case.
+	(closes: #350510)
+
+2008-06-22  Frederic Peters  <fpeters@0d.be>
+
 	* tests/tests.py: define uprint() as jhbuild.main is not imported.
 
 2008-06-22  Frederic Peters  <fpeters@0d.be>
